bpo-41713: _signal doesn't use multi-phase init (GH-22087)

Partially revert commit 26f6ba09dab87c2c150b08b70204df216bd3701b:
don't use multi-phase initialization (PEP 489) for the _signal
extension module.